# gengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen_config.txt
examples/echo/: CMakeLists.txt  Echo.cpp  echo.json
examples/service/: CMakeLists.txt  Service.cpp  gservice.json  service.json
src/: CMakeLists.txt
src/api/: CMakeLists.txt  dummy.cpp
src/appconfig/: AppConfig.cpp  AppConfig.h  BufferConfigReader.cpp  BufferConfigReader.h  CMakeLists.txt  ConfigCommonDefs.h  ConfigDeserializer.cpp  ConfigDeserializer.h  ConfigExtractor.cpp  ConfigExtractor.h  ConfigSerializer.cpp  ConfigSerializer.h  FileConfigReader.cpp  FileConfigReader.h  IConfigReader.h  SelExtractedBufferedConfigReader.cpp  SelExtractedBufferedConfigReader.h  SelfExtractedBufferedConfigReader.cpp  SelfExtractedBufferedConfigReader.h  SelfExtractedFileConfigReader.cpp  SelfExtractedFileConfigReader.h
src/brokers/: CMakeLists.txt  ExecutorBroker.cpp  ExecutorBroker.h  PersistencyBroker.cpp  PersistencyBroker.h  PluginBroker.cpp  PluginBroker.h  ProcessBroker.cpp  ProcessBroker.h  ServiceBroker.cpp  ServiceBroker.h  WorkerBroker.cpp  WorkerBroker.h
src/console-logger/: CMakeLists.txt  ConsoleLogger.cpp  console-logger.json
src/core/: AbstractFactory.h  Blob.cpp  Blob.h  CMakeLists.txt  Compare.h  Encoding.cpp  Encoding.h  Export.h  Hashable.h  IAbstractCreator.h  IMicroService.h  Logger.cpp  Logger.h  Runnable.cpp  Runnable.h  StaticList.h  ToString.h  VariantCreator.h
src/diagnostic/: CMakeLists.txt  CommonDiagnosticDefs.h  IDumper.h
src/diagnostic/Unix/: LinuxCallstackDumper.cpp  LinuxCallstackDumper.h  LinuxErrorsDumper.cpp  LinuxErrorsDumper.h
src/diagnostic/Windows/: MemoryLeaksDumper.cpp  ProcessMemoryDumper.h
src/entries/: ArgsVisitors.cpp  ArgsVisitors.h  BaseArgs.h  CMakeLists.txt  CmdProcessorBase.cpp  CmdProcessorBase.h  CoreDefs.h  EntryBase.cpp  EntryBase.h  EntryPoint.h  EntryRegistry.cpp  EntryRegistry.h  IEntryToolsFactory.h  Main.cpp  Main.h  PluginBase.cpp  PluginBase.h  SharedEntryCreator.cpp  SharedEntryCreator.h  SimpleExecutor.cpp  SimpleExecutor.h  TestArgsVisitor.cpp  TestArgsVisitor.h  TestEntry.cpp  TestEntry.h
src/entries/Unix/: DaemonExecutor.cpp  DaemonExecutor.h  EntryPoint.h  EntryToolsFactory.cpp  EntryToolsFactory.h  LinuxDaemonExecutor.cpp  LinuxDaemonExecutor.h  LinuxEntryToolsFactory.cpp  LinuxEntryToolsFactory.h
src/entries/Windows/: EntryPoint.h  EntryToolsFactory.cpp  EntryToolsFactory.h  ServiceExecutor.cpp  ServiceExecutor.h  ServiceUtils.cpp  ServiceUtils.h
src/entries/diagnostic/: IDumper.h
src/entries/wxWidgets/: wxArgsVisitor.cpp  wxArgsVisitor.h
src/executor-broker/: CMakeLists.txt  ExecutorBroker.cpp
src/filesystem/: CMakeLists.txt  DirectoryIterator.h  FileDetails.h  FileFilters.cpp  FileFilters.h  FileSearcher.h  FileSortRules.cpp  FileSortRules.h  Filesystem.cpp  Filesystem.h
src/filesystem/Linux/: LinuxFilesystem.cpp
src/filesystem/MacOS/: MacFilesystem.cpp
src/filesystem/Unix/: UnixFilesystem.cpp
src/filesystem/Windows/: WinFilesystem.cpp
src/gengine/: gengine.h
src/interprocess-communication/: CMakeLists.txt  ChannelAgent.cpp  ChannelAgent.h  ChannelConnector.cpp  ChannelConnector.h  CommunicationEngine.h  ConnectionValidator.cpp  ConnectionValidator.h  HandleType.h.in  IChannel.h  InputParameters.cpp  InputParameters.h  InterfaceExecutor.h  InterprocessAcceptor.h  InterprocessClient.cpp  InterprocessClient.h  InterprocessClientInterface.h  InterprocessCommonDefs.h  InterprocessServer.cpp  InterprocessServer.h  OutputParameters.cpp  OutputParameters.h  RequestResponseHeader.h  ResponseCodes.h  ServerInitializer.cpp  ServerInitializer.h
src/interprocess-communication/common/: ChannelConnector.cpp  ChannelConnector.h  ConnectionValidator.cpp  (+2 more)
src/interprocess-synchronization/: CMakeLists.txt  Executable.cpp  Executable.h  ExecutableLauncher.cpp  ExecutableLauncher.h  IAliveObject.h  InstanceRegistratorInterface.cpp  ServiceTracker.cpp  ServiceTracker.h
src/interprocess-syncronization/: CMakeLists.txt  Executable.cpp  Executable.h  ExecutableLauncher.cpp  ExecutableLauncher.h  IAliveObject.h  IExecutableLauncherListener.h  InstanceRegistratorInterface.cpp  InstanceRegistratorInterface.h  InterprocessSynchronizationCommon.h  ServiceTracker.cpp  ServiceTracker.h  ServiceTrackerImpl.h
src/json/: Array.cpp  Array.h  CMakeLists.txt  Common.h  DetailValue.cpp  DetailValue.h  JSON.h  Number.cpp  Number.h  Object.cpp  Object.h  Parser.cpp  Parser.h  Value.cpp  Value.h  ValueAdapter.cpp  ValueAdapter.h
src/log4cplus-logger/: CMakeLists.txt  Log4cPlusLogger.cpp
src/logger-proxy/: CMakeLists.txt  LoggerProxy.cpp
src/multithreading/: CMakeLists.txt  Event.cpp  Event.h  Future.cpp  Future.h  ThreadPoolManager.cpp  ThreadPoolManager.h  ThreadUtils.h  WorkerThread.cpp  WorkerThread.h
src/patcher/: CMakeLists.txt  PatcherModule.cpp  PatcherModule.h
src/persistency-broker/: CMakeLists.txt  PersistencyBroker.cpp
src/plugin-broker/: CMakeLists.txt  PluginBroker.cpp
src/process-broker/: CMakeLists.txt  ProcessBroker.cpp
src/serialization/: CMakeLists.txt  Common.h  Deserializer.cpp  Deserializer.h  ISerializable.h  Serializer.cpp  Serializer.h
src/service-broker/: CMakeLists.txt  ServiceBroker.cpp
src/services/: CMakeLists.txt  ServicesCommon.h  SessionQuery.h
src/shared-services/: ISharedLibraryClient.h  SharedServiceCreator.h  SharedServiceExport.h  SharedServiceImport.h
src/worker-broker/: CMakeLists.txt  WorkerBroker.cpp
tests/: CMakeLists.txt
tests/appconfig/: CMakeLists.txt  appconfig-test.json  appconfig.cpp
tests/core/: CMakeLists.txt  blob.cpp  core-test.json  core.cpp
tests/gtest-common/: CMakeLists.txt  gtest.cpp  gtest.h
tests/interprocess-communication/: CMakeLists.txt  interprocess-communication-test.json  parameters.cpp
tests/interprocess-synchronization/: CMakeLists.txt  interprocess-synchronization-test.json
tests/multithreading/: CMakeLists.txt  event.cpp  multithreading-test.json  worker.cpp
tests/serialization/: CMakeLists.txt  serialization-test.json  serialization.cpp
(+124 files in other folders)
